examples/test/testpolicy7304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7304
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key10: value20
      key19: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value3
          key38: value9
      podSelector:
        matchLabels:
          key35: value31
          key41: value35
          key5: value25
